deps/v8/test/message/const-decl-no-init-sloppy.out
# Copyright 2016 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:8: SyntaxError: Missing initializer in const declaration
  const a;
        ^
SyntaxError: Missing initializer in const declaration
